syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

message PisteFrame {
  string path = 1;
  google.protobuf.Any payload = 2;
}

message PisteErrorFrame {
  optional string path = 1;
  string error = 2;
  optional string message = 3;
}

message PisteCloseFrame {
  string path = 4;
}

message PisteGetServicesResponse {
  repeated string services = 1;
}

message PisteServiceInformation {
  string title = 2;
  string description = 3;
}
message PisteGetInformationResponse {
  map<string, PisteServiceInformation> information = 1;
}

service Piste {
  rpc GetServices(google.protobuf.Empty) returns (PisteGetServicesResponse);
  rpc GetInformation(google.protobuf.Empty) returns (PisteGetInformationResponse);
}
